ui: fix bleed section class

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -96,12 +96,7 @@
 	}
 
 	.bleed-section {
-		grid-column: full-bleed;
-		@apply p-4 md:p-0;
-
-		@media screen and (min-width: 768px) {
-			grid-column: bleed;
-		}
+		grid-column: bleed;
 	}
 
 	.full-bleed-section {
